<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:letterSpacing="0.02"
                android:text="@string/open_new_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/titlePeriodic"
                style="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/inputTitle"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="3" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/balance"
                style="@style/TextInputLayout"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titlePeriodic"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/inputAmount"
                    style="@style/TextInputLayoutEditText"
                    android:hint="@string/initial_amount"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="11" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/labelBlockTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/currency"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balance" />

            <RelativeLayout
                android:id="@+id/currencyLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelBlockTime">

                <Spinner
                    android:id="@+id/spinnerCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:id="@+id/create"
                style="@style/DialogButton"
                android:layout_marginTop="20dp"
                android:text="@string/create"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currencyLayout" />

            <TextView
                android:id="@+id/cancel"
                style="@style/DialogButton"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/create"
                app:layout_constraintTop_toTopOf="@id/create" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</ScrollView>