...
                android:maxLines="3" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/add"
            style="@style/DialogButton"
            android:layout_marginTop="20dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titlePeriodic" />
...
